# news-feed

./: .gitignore  README.md
backend/: pyproject.toml  run.py
backend/app/: config.py  db.py  web.py
backend/app/core/: config.py  db.py  utils.py
backend/app/forms/: users.py
backend/app/repos/: __init__.py  comment.py  friend.py  like.py  post.py  user.py
backend/app/routes/: __init__.py  auth.py  post.py  user.py
backend/app/schemas/: __init__.py  base.py  comments.py  friends.py  likes.py  posts.py  users.py
backend/app/tests/: conftest.py
backend/app/tests/crud/: test_user.py
backend/fixtures/: db_query.sql
